# torrent-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  docker-compose.yaml  runner.Dockerfile  server.Dockerfile
.github/workflows/: build-master.yml  build-multiarch-on-spot.yml  build-multiarch.yml  build-tag.yml  test.yml
crates/torrent-bot-clients/: Cargo.toml
crates/torrent-bot-clients/src/: lib.rs  telegram.rs  toloka.rs  transmission.rs  transmission_extensions.rs
crates/torrent-bot-clients/src/openai/: mod.rs
crates/torrent-bot-clients/src/telegram/: client.rs  mod.rs  traits.rs
crates/torrent-bot-clients/src/toloka/: client.rs  mod.rs  parsers.rs  types.rs
crates/torrent-bot-clients/src/toloka/res/: search_results.html  single_topic.html  watched_topics.html
crates/torrent-bot-runner/: Cargo.toml
crates/torrent-bot-runner/src/: client.rs  config.rs  main.rs  sync_extensions.rs  sync_v2.rs  task_db.rs  task_storage.rs
crates/torrent-bot-runner/src/clients/: telegram.rs  transmission.rs
crates/torrent-bot-server/: Cargo.toml
crates/torrent-bot-server/src/: config.rs  main.rs  serde_helpers.rs  telegram_bot.rs
crates/torrent-bot-server/src/handlers/: dummy.rs  mod.rs  readiness_check.rs  telegram_bot.rs
crates/torrent-bot-sniper/: Cargo.toml
crates/torrent-bot-sniper/src/: config.rs  main.rs  snipe_db.rs
src/: config.rs  main.rs  storage.rs  sync.rs  sync_v2.rs  task_db.rs  toloka_client.rs  transmission_client.rs  types.rs
src/clients/: mod.rs  telegram.rs  toloka.rs  transmission.rs
terraform/: outputs.tf  providers.tf  spot.tf  terraform.tfvars.dist  variables.tf
