[package]
name = "torrent-bot"
version = "0.1.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# transmission-rpc = "0.3.6"
reqwest = { version = "0.11.10", features = ["cookies"] }
actix-rt = "2.7.0"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
scraper = "0.13.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
