[package]
name = "torrent-bot"
version = "0.1.1"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission-rpc = "0.3.6"
reqwest = { version = "0.11.10", features = ["cookies"] }
actix-rt = "2.8.0"
thiserror = "1.0.30"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.116"
scraper = "0.13.0"
dotenv = "0.15.0"
envy = "0.4.2"
sled = "0.34.7"
base64 = "0.13.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
