[package]
name = "torrent-bot"
version = "1.0.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission-rpc = "0.4.2"
reqwest = { version = "0.12.5", features = ["cookies"] }
actix-rt = "2.10.0"
thiserror = "1.0.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
scraper = "0.19.0"
dotenv = "0.15.0"
envy = "0.4.2"
sled = "0.34.7"
base64 = "0.22.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
parking_lot = "0.12.3"
