[package]
name = "torrent-bot-clients"
version = "1.1.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

[dependencies]
transmission-rpc = "0.5.0"
reqwest = { version = "0.12.5", features = ["cookies"] }
actix-rt = "2.10.0"
thiserror = "1.0.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
scraper = "0.23.0"
base64 = "0.22.1"
tracing = "0.1.40"
parking_lot = "0.12.3"
teloxide = { version = "0.12", features = ["macros"] }
async-trait = "0.1.81"
