[package]
name = "torrent-bot-runner"
version = "1.1.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
thiserror = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
dotenv = "0.15.0"
envy = "0.4.2"
sled = "0.34.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
torrent-bot-clients = { version = "1.1.0", path = "../torrent-bot-clients" }
reqwest = { version = "0.12.5", features = ["json"] }
