[package]
name = "torrent-bot-server"
version = "1.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = { version = "4.8.0", features = ["rustls"] }
thiserror = "1.0.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
torrent-bot-clients = { version = "1.1.0", path = "../torrent-bot-clients" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
futures-lite = "2.3.0"
dotenv = "0.15.0"
envy = "0.4.2"
